cbits/Bullet.h

void* btDbvt_IClone_new(); //constructor: IClone  ( ::btDbvt::IClone::* )(  ) 
void btDbvt_IClone_free(void *c);
 
void btDbvt_IClone_CloneLeaf(void *c,void* p0); //method: CloneLeaf void ( ::btDbvt::IClone::* )( ::btDbvtNode * ) 
void* btDbvt_ICollide_new(); //constructor: ICollide  ( ::btDbvt::ICollide::* )(  ) 
void btDbvt_ICollide_free(void *c);
 
void btDbvt_ICollide_Process(void *c,void* p0,void* p1); //method: Process void ( ::btDbvt::ICollide::* )( ::btDbvtNode const *,::btDbvtNode const * ) 
void btDbvt_ICollide_Process0(void *c,void* p0,void* p1); //method: Process void ( ::btDbvt::ICollide::* )( ::btDbvtNode const *,::btDbvtNode const * ) 
void btDbvt_ICollide_Process1(void *c,void* p0); //method: Process void ( ::btDbvt::ICollide::* )( ::btDbvtNode const * ) 
void btDbvt_ICollide_Process2(void *c,void* p0,float p1); //method: Process void ( ::btDbvt::ICollide::* )( ::btDbvtNode const *,::btScalar ) 
int btDbvt_ICollide_AllLeaves(void *c,void* p0); //method: AllLeaves bool ( ::btDbvt::ICollide::* )( ::btDbvtNode const * ) 
int btDbvt_ICollide_Descent(void *c,void* p0); //method: Descent bool ( ::btDbvt::ICollide::* )( ::btDbvtNode const * ) 
void btDbvt_IWriter_WriteLeaf(void *c,void* p0,int p1,int p2); //method: WriteLeaf void ( ::btDbvt::IWriter::* )( ::btDbvtNode const *,int,int ) 
void btDbvt_IWriter_WriteNode(void *c,void* p0,int p1,int p2,int p3,int p4); //method: WriteNode void ( ::btDbvt::IWriter::* )( ::btDbvtNode const *,int,int,int,int ) 
void btDbvt_IWriter_Prepare(void *c,void* p0,int p1); //method: Prepare void ( ::btDbvt::IWriter::* )( ::btDbvtNode const *,int ) 
void* bt32BitAxisSweep3_new(float* p0,float* p1,unsigned int p2,void* p3,int p4); //constructor: bt32BitAxisSweep3  ( ::bt32BitAxisSweep3::* )( ::btVector3 const &,::btVector3 const &,unsigned int,::btOverlappingPairCache *,bool ) 
void bt32BitAxisSweep3_free(void *c);
 
void* btAxisSweep3_new(float* p0,float* p1,short unsigned int p2,void* p3,int p4); //constructor: btAxisSweep3  ( ::btAxisSweep3::* )( ::btVector3 const &,::btVector3 const &,short unsigned int,::btOverlappingPairCache *,bool ) 
void btAxisSweep3_free(void *c);
 
void* btAxisSweep3Internal_unsignedint__new(float* p0,float* p1,unsigned int p2,unsigned int p3,unsigned int p4,void* p5,int p6); //constructor: btAxisSweep3Internal  ( ::btAxisSweep3Internal<unsigned int>::* )( ::btVector3 const &,::btVector3 const &,unsigned int,unsigned int,unsigned int,::btOverlappingPairCache *,bool ) 
void btAxisSweep3Internal_unsignedint__free(void *c);
 
void btAxisSweep3Internal_unsignedint__sortMinUp(void *c,int p0,unsigned int p1,void* p2,int p3); //method: sortMinUp void ( ::btAxisSweep3Internal<unsigned int>::* )( int,unsigned int,::btDispatcher *,bool ) 
unsigned int btAxisSweep3Internal_unsignedint__allocHandle(void *c); //method: allocHandle unsigned int ( ::btAxisSweep3Internal<unsigned int>::* )(  ) 
unsigned int btAxisSweep3Internal_unsignedint__getNumHandles(void *c); //method: getNumHandles unsigned int ( ::btAxisSweep3Internal<unsigned int>::* )(  ) const
unsigned int btAxisSweep3Internal_unsignedint__addHandle(void *c,float* p0,float* p1,void* p2,short int p3,short int p4,void* p5,void* p6); //method: addHandle unsigned int ( ::btAxisSweep3Internal<unsigned int>::* )( ::btVector3 const &,::btVector3 const &,void *,short int,short int,::btDispatcher *,void * ) 
//not supported method: quantize void ( ::btAxisSweep3Internal<unsigned int>::* )( unsigned int *,::btVector3 const &,int ) const
// error:  - unsupported, ::btVector3 const & - ok, int - ok, void - ok

void btAxisSweep3Internal_unsignedint__sortMaxUp(void *c,int p0,unsigned int p1,void* p2,int p3); //method: sortMaxUp void ( ::btAxisSweep3Internal<unsigned int>::* )( int,unsigned int,::btDispatcher *,bool ) 
void btAxisSweep3Internal_unsignedint__removeHandle(void *c,unsigned int p0,void* p1); //method: removeHandle void ( ::btAxisSweep3Internal<unsigned int>::* )( unsigned int,::btDispatcher * ) 