Physics/Bullet/Raw/BulletCollision/BroadphaseCollision.chs

{-#LANGUAGE ForeignFunctionInterface#-}
#include "Bullet.h"
module Physics.Bullet.Raw.BulletCollision.BroadphaseCollision (
module Physics.Bullet.Raw.BulletCollision.BroadphaseCollision
) where
import Control.Monad
import Foreign.Marshal.Alloc
import Foreign.ForeignPtr.Unsafe
import Foreign.Ptr
import Physics.Bullet.Raw.C2HS
import Physics.Bullet.Raw.Types
import Physics.Bullet.Raw.Class
-- * IClone
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#242>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_IClone_new as btDbvt_IClone    {  } -> `BtDbvt_IClone' mkBtDbvt_IClone* #}
{#fun btDbvt_IClone_free    `( BtDbvt_ICloneClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#244>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_IClone_CloneLeaf as btDbvt_IClone_CloneLeaf    `( BtDbvt_ICloneClass bc , BtDbvtNodeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
 } ->  `()'   #}
-- * ICollide
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#224>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_ICollide_new as btDbvt_ICollide    {  } -> `BtDbvt_ICollide' mkBtDbvt_ICollide* #}
{#fun btDbvt_ICollide_free    `( BtDbvt_ICollideClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#226>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_ICollide_Process0 as btDbvt_ICollide_Process    `( BtDbvt_ICollideClass bc , BtDbvtNodeClass p0 , BtDbvtNodeClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
, withBt* `p1'  -- ^ arg1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#226>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_ICollide_Process0 as btDbvt_ICollide_Process0    `( BtDbvt_ICollideClass bc , BtDbvtNodeClass p0 , BtDbvtNodeClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
, withBt* `p1'  -- ^ arg1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#227>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_ICollide_Process1 as btDbvt_ICollide_Process1    `( BtDbvt_ICollideClass bc , BtDbvtNodeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#228>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_ICollide_Process2 as btDbvt_ICollide_Process2    `( BtDbvt_ICollideClass bc , BtDbvtNodeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ n
,  `Float'  -- ^ arg1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#230>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_ICollide_AllLeaves as btDbvt_ICollide_AllLeaves    `( BtDbvt_ICollideClass bc , BtDbvtNodeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#229>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_ICollide_Descent as btDbvt_ICollide_Descent    `( BtDbvt_ICollideClass bc , BtDbvtNodeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
 } ->  `Bool'   #}
-- * IWriter
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#238>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_IWriter_WriteLeaf as btDbvt_IWriter_WriteLeaf    `( BtDbvt_IWriterClass bc , BtDbvtNodeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
,  `Int'  -- ^ index
,  `Int'  -- ^ parent
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#237>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_IWriter_WriteNode as btDbvt_IWriter_WriteNode    `( BtDbvt_IWriterClass bc , BtDbvtNodeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
,  `Int'  -- ^ index
,  `Int'  -- ^ parent
,  `Int'  -- ^ child0
,  `Int'  -- ^ child1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.h?r=2223#236>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btDbvt.cpp?r=2223>
-}
{#fun btDbvt_IWriter_Prepare as btDbvt_IWriter_Prepare    `( BtDbvt_IWriterClass bc , BtDbvtNodeClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ root
,  `Int'  -- ^ numnodes
 } ->  `()'   #}
-- * bt32BitAxisSweep3
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#1046>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun bt32BitAxisSweep3_new as bt32BitAxisSweep3    `( BtOverlappingPairCacheClass p3 )' =>     {  withVec3* `Vec3' , withVec3* `Vec3' ,  `Word32' , withBt* `p3' ,  `Bool'  } -> `Bt32BitAxisSweep3' mkBt32BitAxisSweep3* #}
{#fun bt32BitAxisSweep3_free    `( Bt32BitAxisSweep3Class bc )' =>     { withBt* `bc'  } -> `()' #}
-- * btAxisSweep3
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#1035>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3_new as btAxisSweep3    `( BtOverlappingPairCacheClass p3 )' =>     {  withVec3* `Vec3' , withVec3* `Vec3' ,  `Int' , withBt* `p3' ,  `Bool'  } -> `BtAxisSweep3' mkBtAxisSweep3* #}
{#fun btAxisSweep3_free    `( BtAxisSweep3Class bc )' =>     { withBt* `bc'  } -> `()' #}
-- * btAxisSweep3Internal<unsigned int>
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#352>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__new as btAxisSweep3Internal_unsignedint_    `( BtOverlappingPairCacheClass p5 )' =>     {  withVec3* `Vec3' , withVec3* `Vec3' ,  `Word32' ,  `Word32' ,  `Word32' , withBt* `p5' ,  `Bool'  } -> `BtAxisSweep3Internal_unsignedint_' mkBtAxisSweep3Internal_unsignedint_* #}
{#fun btAxisSweep3Internal_unsignedint__free    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#859>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__sortMinUp as btAxisSweep3Internal_unsignedint__sortMinUp    `( BtAxisSweep3Internal_unsignedint_Class bc , BtDispatcherClass p2 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ axis
,  `Word32'  -- ^ edge
, withBt* `p2'  -- ^ dispatcher
,  `Bool'  -- ^ updateOverlaps
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#481>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__allocHandle as btAxisSweep3Internal_unsignedint__allocHandle    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#130>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__getNumHandles as btAxisSweep3Internal_unsignedint__getNumHandles    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#505>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__addHandle as btAxisSweep3Internal_unsignedint__addHandle    `( BtAxisSweep3Internal_unsignedint_Class bc , BtDispatcherClass p5 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
, withVoidPtr* `VoidPtr'  -- ^ pOwner
,  `Int'  -- ^ collisionFilterGroup
,  `Int'  -- ^ collisionFilterMask
, withBt* `p5'  -- ^ dispatcher
, withVoidPtr* `VoidPtr'  -- ^ multiSapProxy
 } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#505>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__addHandle as btAxisSweep3Internal_unsignedint__addHandle'    `( BtAxisSweep3Internal_unsignedint_Class bc , BtDispatcherClass p5 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
, withVoidPtr* `VoidPtr'  -- ^ pOwner
,  `Int'  -- ^ collisionFilterGroup
,  `Int'  -- ^ collisionFilterMask
, withBt* `p5'  -- ^ dispatcher
, withVoidPtr* `VoidPtr'  -- ^ multiSapProxy
 } ->  `Word32'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#978>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__sortMaxUp as btAxisSweep3Internal_unsignedint__sortMaxUp    `( BtAxisSweep3Internal_unsignedint_Class bc , BtDispatcherClass p2 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ axis
,  `Word32'  -- ^ edge
, withBt* `p2'  -- ^ arg2
,  `Bool'  -- ^ updateOverlaps
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#561>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__removeHandle as btAxisSweep3Internal_unsignedint__removeHandle    `( BtAxisSweep3Internal_unsignedint_Class bc , BtDispatcherClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Word32'  -- ^ handle
, withBt* `p1'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#175>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
